[tool.poetry]
name = "streamlit-spike"
version = "0.1.0"
description = ""
authors = ["mleader <mleader@redhat.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
scipy = "^1.8.1"
streamlit = "^1.10.0"
streamlit-aggrid = "^0.2.3"
sqlmodel = "^0.0.6"
plotnine = ">=0.8.0"
psycopg2-binary = "^2.9.3"
psycopg2 = "^2.9.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
psycopg2-binary = "^2.9.3"
